rust/surreal-orm-tests/tests/snapshots/test_query_builder__tests__multiplication_tests1-3.snap
---
source: surreal-macros/tests/test_query_builder.rs
expression: query.to_string()
---
"SELECT *, age, firstName, firstName, unoBook, firstName, unoBook FROM student, student, book, student, book, $_param_00000000, $_param_00000000, $_param_00000000, $_param_00000000, $_param_00000000, $_param_00000000, (SELECT * FROM book WHERE (content ~ $_param_00000000 AND $_param_00000000 >= $_param_00000000) OR (firstName = $_param_00000000) AND (lastName = $_param_00000000) GROUP BY content, age ORDER BY lastName  DESC LIMIT 50 START AT 20 TIMEOUT 9s PARALLEL;) WHERE (age > $_param_00000000 >= $_param_00000000 <= $_param_00000000 ~ $_param_00000000 + $_param_00000000 - $_param_00000000 AND $_param_00000000 OR $_param_00000000) AND (bestFriend == $_param_00000000) OR (firstName = $_param_00000000) AND (age >= $_param_00000000) SPLIT lastName, firstName, firstName, semCoures, firstName, semCoures GROUP BY course, firstName, lastName, unoBook, lowo, lastName, unoBook, lowo, firstName, lastName, age, unoBook, age, unoBook, age, bestFriend, dayo ORDER BY firstName RAND() DESC, lastName COLLATE ASC, id NUMERIC DESC, id NUMERIC DESC, id NUMERIC DESC, firstName  DESC, id NUMERIC DESC, firstName  DESC LIMIT 400 START AT 5 TIMEOUT 8s PARALLEL;"
