rust/surreal-orm-tests/tests/snapshots/test_query_builder__tests__multiplication_tests1-4.snap
---
source: surreal-macros/tests/test_query_builder.rs
expression: query.get_bindings()
---
[
    Binding {
        param: "_param_00000000",
        value: Table(
            Table(
                "student",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "student",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Table(
            Table(
                "student",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "student",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Table(
            Table(
                "book",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "book",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Table(
            Table(
                "student",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "student",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Table(
            Table(
                "book",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "book",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Thing(
            Thing {
                tb: "book",
                id: Number(
                    1,
                ),
            },
        ),
        original_inline_name: "_param_00000000",
        raw_string: "book:1",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Thing(
            Thing {
                tb: "book",
                id: Number(
                    1,
                ),
            },
        ),
        original_inline_name: "_param_00000000",
        raw_string: "book:1",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Thing(
            Thing {
                tb: "student",
                id: Number(
                    1,
                ),
            },
        ),
        original_inline_name: "_param_00000000",
        raw_string: "student:1",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Thing(
            Thing {
                tb: "book",
                id: Number(
                    1,
                ),
            },
        ),
        original_inline_name: "_param_00000000",
        raw_string: "book:1",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Thing(
            Thing {
                tb: "student",
                id: Number(
                    1,
                ),
            },
        ),
        original_inline_name: "_param_00000000",
        raw_string: "student:1",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Thing(
            Thing {
                tb: "book",
                id: Number(
                    1,
                ),
            },
        ),
        original_inline_name: "_param_00000000",
        raw_string: "book:1",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Table(
            Table(
                "book",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "book",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "lowo",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'lowo'",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Table(
            Table(
                "age",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "age",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Number(
            Int(
                600,
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "600",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Oyelowo",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'Oyelowo'",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Oyedayo",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'Oyedayo'",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Table(
            Table(
                "age",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "age",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Table(
            Table(
                "age",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "age",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Number(
            Int(
                20,
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "20",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Table(
            Table(
                "firstName",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "firstName",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Number(
            Int(
                5,
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "5",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Number(
            Int(
                10,
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "10",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Table(
            Table(
                "unoBook",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "unoBook",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Table(
            Table(
                "age",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "age",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Oyelowo",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'Oyelowo'",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: True,
        original_inline_name: "_param_00000000",
        raw_string: "true",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Number(
            Int(
                150,
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "150",
        description: None,
    },
]
