rust/surreal-orm-tests/tests/snapshots/test_query_builder__tests__relate_query-2.snap
---
source: surreal-macros/tests/test_query_builder.rs
expression: relate_simple
---
"{\"timeWritten\":{\"secs\":343,\"nanos\":0},\"in\":\"student:1\",\"out\":\"book:2\"}"
