rust/surreal-orm-tests/tests/snapshots/test_query_builder__tests__relate_query_building_for_subqueries.snap
---
source: surreal-macros/tests/test_query_builder.rs
expression: relation.to_string()
---
"RELATE (SELECT * FROM student)->writes->(SELECT * FROM book WHERE title ~ $_param_00000000) CONTENT $_param_00000000 ;"
