rust/surreal-orm-tests/tests/snapshots/test_query_builder__tests__should_display_params_in_mock.snap
---
source: surreal-macros/tests/test_query_builder.rs
expression: mock
---
RELATE student:1->writes->book:2 CONTENT $_param_00000000 PARALLEL ;
